--- a/package.json
+++ b/package.json
@@ -5,21 +5,20 @@
   "main": "index.js",
   "scripts": {
     "init-project": "npm install && npm run init:dirs && npm run init:gitignore",
-    "build": "npm-run-all build:* test",
-    "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
+    "build": "npm run-all build:* test",
+    "build-dev": "npm run-all build-dev:sass build:autoprefixer",
     "init:dirs": "mkdirp sass css vendor images js",
-	"init:files": "npm-run-all init:files:*",
-	"init:files:html": "echo '' >> index.html",
-	"init:files:css": "echo '' >> css\style.css",
+    "init:files": "npm run-all init:files:*",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
-    "test": "npm run test:html",
+    "test": "npm run-all test:*",
+    "test:js": "eslint js/",
     "test:html": "html-validate *.html",
     "build:sass": "sass --style=compressed --no-source-map sass:css",
     "build-dev:sass": "sass --style=expanded --source-map sass:css",
     "build:autoprefixer": "postcss css/*.css --use autoprefixer -d css",
     "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
     "watch:sassprefixer": "onchange sass/*.scss -- npm run build-dev",
-    "watch": "npm-run-all build:* build-dev -p watch:*"
+    "watch": "npm-run-all build build-dev -p watch:*"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "browser-sync": "^2.27.7",
+    "eslint": "^8.6.0",
     "mkdirp": "^1.0.4",
     "onchange": "^7.1.0",
     "postcss": "^8.2.6",
